--- a/Lab/Lab3/Part I - Inverse_Geometry.ipynb
+++ b/Lab/Lab3/Part I - Inverse_Geometry.ipynb
@@ -61,6 +61,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** Rest the robot's sensors if you're using the real robot. Like what you did during previous weeks, put the robot into the zero position and run the following cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if use_real_robot:\n",
+    "    robot.reset_sensors()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -154,12 +171,11 @@
    "source": [
     "### THE BALL POSITIONS ARE DEFINED HERE ###\n",
     "# here we create a list of ball positions and display them if we are in simulation\n",
-    "ball_positions = [np.array([ 0., 0.,0.05]), np.array([ 0., 0.12,0.05]), np.array([-0.2,0.12,0.05])]\n",
-    "# ball_positions = [np.array([0.597,-0.056, 0.0]), np.array([0.521,0.12, 0.0]), np.array([0.3,-0.225, 0.0])]\n",
+    "ball_positions = [np.array([0.597,-0.056, 0.0]), np.array([0.521,0.12, 0.0]), np.array([0.3,-0.225, 0.0])]\n",
     "\n",
     "if not use_real_robot:\n",
     "    for ball in ball_positions:\n",
-    "        robot.add_ball(ball[0], ball[1])\n",
+    "        robot.add_ball(ball)\n",
     "\n",
     "# we simulate for 9 seconds (3 seconds per goal)\n",
     "run_time = 9.\n",
@@ -342,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
