minor bug fixes

--- a/Lab/Lab3/Part I - Inverse_Geometry.ipynb
+++ b/Lab/Lab3/Part I - Inverse_Geometry.ipynb
@@ -39,6 +39,7 @@
    "outputs": [],
    "source": [
     "# we import useful libraries\n",
+    "from time import sleep\n",
     "import numpy as np\n",
     "import matplotlib as mp\n",
     "import matplotlib.pyplot as plt\n",
@@ -255,7 +256,7 @@
     "    \n",
     "    # we send them to the robot and do one simulation step\n",
     "    robot.send_joint_torque(joint_torques)\n",
-    "    robot.step()"
+    "    sleep(robot.dt)"
    ]
   },
   {
@@ -333,13 +334,6 @@
     "    \n",
     "plot_joint_posvel(time, measured_positions, desired_positions, measured_velocities, desired_velocities)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
