minor explanation information is added.

--- a/Lab/Lab4/Impedance control.ipynb
+++ b/Lab/Lab4/Impedance control.ipynb
@@ -42,7 +42,33 @@
     "l0 = 0.3\n",
     "l1 = 0.16\n",
     "l2 = 0.16\n",
-    "l3 = 0.014"
+    "l3 = 0.014\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you're using the real robot, put it in home configuration and run the following to instantiate the interface and reset the sensors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if use_real_robot:\n",
+    "    # Triggers the real robot\n",
+    "    # Don't forget to turn on the robot first !!!\n",
+    "    robot = NYUFingerHardware()\n",
+    "    # Make sure the robot is in the zero configuration before running this cell\n",
+    "    robot.reset_sensors()\n",
+    "else:\n",
+    "    # we can now create a robot simulation\n",
+    "    robot = NYUFingerSimulator()\n",
+    "    robot.reset(np.zeros(3))"
    ]
   },
   {
@@ -96,7 +122,9 @@
    "metadata": {},
    "source": [
     "## Questions\n",
-    "1. Write an impedance controller with a constant stiffness and $p_0 = [0.3, -0.2, 0.014]$. Tune the PD gains in all directions so that it stays in place as rigidly as possible.\n",
+    "Except for the last question, all the questions should be run both in simulation and using the real robot.\n",
+    "\n",
+    "1. Write an impedance controller with a constant stiffness and $p_0 = [0.3, -0.2, 0.014]$ (You can also choose any $p_0$ you desire by feeding the joint configs of the desired state into your forward kinematics implementation). Tune the PD gains in all directions so that it stays in place as rigidly as possible.\n",
     " Plot the position of the end-effector and its velocity as a function of time starting from $q=[0, 0, 0]$. Does it behave as expected? Explain.\n",
     "\n",
     "2. Write an impedance controller that can draw a circle in the x-y plane at a frequency of 0.5Hz, i.e. the end-effector should follow the trajectory $$x_{ref}(t) = \\begin{pmatrix} 0.3 + 0.05\\cos(\\pi t) \\\\ -0.2 + 0.05 \\sin(\\pi t) \\\\ 0 \\end{pmatrix}$$\n",
@@ -113,17 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if use_real_robot:\n",
-    "    # Triggers the real robot\n",
-    "    # Don't forget to turn on the robot first !!!\n",
-    "    robot = NYUFingerHardware()\n",
-    "    # Make sure the robot is in the zero configuration before running this cell\n",
-    "    robot.reset_sensors()\n",
-    "else:\n",
-    "    # we can now create a robot simulation\n",
-    "    robot = NYUFingerSimulator()\n",
-    "    robot.reset(np.zeros(3))\n",
-    "    \n",
+    " \n",
     "# we simulate for 10 seconds\n",
     "run_time = 10.\n",
     "dt = 0.001\n",
