dual finger hardware interface is added.

--- a/Lab/Lab5/Manipulating_objects.ipynb
+++ b/Lab/Lab5/Manipulating_objects.ipynb
@@ -42,10 +42,10 @@
     "from robot_utils import getBodyJacobianOrientedLikeSpatialFrame\n",
     "\n",
     "# we import the robot class\n",
-    "use_real_robot = False\n",
+    "use_real_robot = True\n",
     "\n",
     "if use_real_robot:\n",
-    "    from NYUFinger.sim import NYUDualFingerReal as Robot   \n",
+    "    from NYUFinger.real import NYUDualFingerHardware as Robot   \n",
     "else:\n",
     "    from NYUFinger.sim import NYUDualFingerSimulator as Robot\n",
     "\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,33 @@
     "    robot.reset_sensors()\n",
     "else:\n",
     "    robot.reset()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also visualize the robot to ensure that the real movement of the robot matches the 3D simulator environment (Only if you're using the real robot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "if use_real_robot:\n",
+    "    from NYUFinger.utils.vis import NYUDualFingerVisualizer\n",
+    "    vis = NYUDualFingerVisualizer()\n",
+    "    start_time = time.time()\n",
+    "    while time.time()-start_time < 60:\n",
+    "        q, dq = robot.get_state()\n",
+    "        robot.send_joint_torque(np.zeros(6))\n",
+    "        vis.show(q)\n",
+    "        time.sleep(0.01)\n",
+    "else:\n",
+    "    print('This visualization is meaningless for the simulated robot experiment')"
    ]
   },
   {
