cubes initial positions fixed.

--- a/Lab/Lab5/Manipulating_objects.ipynb
+++ b/Lab/Lab5/Manipulating_objects.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "from robot_utils import getBodyJacobianOrientedLikeSpatialFrame\n",
     "\n",
     "# we import the robot class\n",
-    "use_real_robot = True\n",
+    "use_real_robot = False\n",
     "\n",
     "if use_real_robot:\n",
     "    from NYUFinger.real import NYUDualFingerHardware as Robot   \n",
